// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactLink renders 1`] = `
<a
  href="//rock.newspring.cc/workflows/152?Topic=Stewardship"
  rel="noopener noreferrer"
  target="_blank"
>
  contact us
</a>
`;

exports[`ContactUs renders 1`] = `
<p
  className="test-dark-tertiary text-left"
>
  <em>
    If you have any questions please call our Finance Team at 864-965-9990 or
     
    <ContactLink />
     
    and someone will be happy to assist you.
  </em>
</p>
`;

exports[`Success renders with a different type 1`] = `
<div
  className="soft soft-double-ends push-double-top@anchored one-whole text-center"
>
  <div
    className="push-double-top"
  >
    <Success
      fill="#6BAC43"
      height="61px"
      width="60px"
    />
    <h3
      className="text-primary push-ends"
    >
      Success!
    </h3>
    <p>
      Your account has been removed!
    </p>
    <button
      className="btn one-whole push-bottom"
      onClick={[Function]}
    >
      Back To Dashboard
    </button>
    <ContactUs />
  </div>
</div>
`;

exports[`Success renders with default props 1`] = `
<div
  className="soft soft-double-ends push-double-top@anchored one-whole text-center"
>
  <div
    className="push-double-top"
  >
    <Success
      fill="#6BAC43"
      height="61px"
      width="60px"
    />
    <h3
      className="text-primary push-ends"
    >
      Success!
    </h3>
    <p>
      Thank you for updating your saved account!
    </p>
    <button
      className="btn one-whole push-bottom"
      onClick={[Function]}
    >
      Back To Dashboard
    </button>
    <ContactUs />
  </div>
</div>
`;
